--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="//fonts.googleapis.com/css?family=Hind+Siliguri:300,400,500,600,700" rel="stylesheet">
 </head>
 <body class="bg-agileinfo">
-   <h1 class="agile-head text-center">RAZAM creative solidarity platform</h1>
+   <h1 class="agile-head text-center">RAZAM - creative solidarity platform</h1>
 	<div class="container-w3">
 		<div class="content1-w3layouts"> 
 			<img src="images/22.png" alt="under-construction">
