--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="//fonts.googleapis.com/css?family=Hind+Siliguri:300,400,500,600,700" rel="stylesheet">
 </head>
 <body class="bg-agileinfo">
-   <h2 class="agile-head text-center">RAZAM - creative solidarity platform</h2>
+   <h3 class="agile-head text-left">RAZAM - creative solidarity platform</h3>
 	<div class="container-w3">
 		<div class="content1-w3layouts"> 
 			<img src="images/logo-rm.png" alt="under-construction">
